# ChessAIArena

./: .gitignore  CMakeLists.txt  Chess.cpp  Chess.h  ChessObserver.h  ChessPlayer.h  Matchmaking.cpp  Matchmaking.h  main.cpp
examples/: capture.py  randomChess.py  userChess.py  websocketTest.py
examples/userChess/: Cargo.toml
examples/userChess/src/: main.rs
webclient/: index.html  main.js
